src/theme/milk.scss
.milkdown {
  font-family: var(--pi-global-font) !important;
  overflow-x: hidden !important;

  .editor > * {
    margin: 10px 0 !important;
    word-break: break-all;
  }

  .editor {
    padding: 0 !important;
    min-height: calc(100% - 12px);

    .heading {
      margin: 12px 0 !important;
      font-weight: bolder !important;
      padding-bottom: 8px;
    }

    h1 {
      font-size: 2rem !important;
      border-bottom: 1px #eee solid !important ;
    }

    h2 {
      font-size: 1.8rem !important;
      border-bottom: 1px #eee solid !important ;
    }

    h3 {
      font-size: 1.6rem !important;
      border-bottom: 1px #eee solid !important ;
    }

    h4 {
      font-size: 1.4rem !important;
    }

    h5 {
      font-size: 1.2rem !important;
    }

    h6 {
      font-size: 1rem !important;
    }

    p {
      font-size: 0.9rem !important;
    }

    blockquote {
      padding-left: 12px !important;
    }

    .code-fence pre code {
      font-family: var(--pi-code-font) !important;
    }

    .code-inline {
      font-weight: bolder !important;
      font-family: var(--pi-code-font) !important;
      border: 1px solid #e7eaed !important;
      background-color: #f8f8f8 !important;
      color: rgba(46, 52, 64, 1) !important;
      border-radius: 4px !important;
      padding: 2px 4px 2px 4px !important;
      font-size: 0.9em !important;
    }
  }
}

.light {
  .milkdown {
    background: unset !important;
  }
}

.dark {
  .milkdown {
    background: unset !important;
  }
}

